@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fl_Window::draw() now doesn't reset its x/y-coordinates to 0
+	  anymore before drawing itself and its children.
 	- All draw() methods of widgets are now protected (STR #2142).
 	- The new configure option --enable-x11 (lowercase 'x') enables
 	  cygwin builds under Windows (with --enable-cygwin) to use X11
